// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PercentageCell component PercentageCell handles changes 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value="1,234 %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell handles changes 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value=" %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--percentage-readonly"
              id="data"
              name="data"
            >
              1,234 %
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders cell editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="ellipsis"
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value=" %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--percentage-readonly"
              id="data"
              name="data"
            >
              1,234 %
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders row editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value=" %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--negative table--cell-value--percentage-readonly"
              id="data"
              name="data"
            >
              -4,321 %
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
